# GDVPraktikum

./: .gitignore  CMakeLists.txt  Robot.h  Wuerfel.cpp  Wuerfel.h  teil_1.cpp
